--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "@google/genai": "^1.24.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "deno.ns": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
